--- a/Spriggit.UI/App.xaml
+++ b/Spriggit.UI/App.xaml
@@ -12,10 +12,12 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.Buttons.xaml" />
 
                 <!--  Accent and AppTheme setting  -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Purple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/dark.emerald.xaml" />
 
                 <!--  Noggog Theming  -->
                 <ResourceDictionary Source="pack://application:,,,/Noggog.WPF;component/Everything.xaml" />
+                
+                <ResourceDictionary Source="Resources.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
