--- a/Spriggit.UI/Views/LinkListingView.xaml
+++ b/Spriggit.UI/Views/LinkListingView.xaml
@@ -1,12 +1,73 @@
-﻿<UserControl x:Class="Spriggit.UI.LinkListingView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Spriggit.UI"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <TextBlock Text="Derp" />
+﻿<wpf:NoggogUserControl x:TypeArguments="viewModels:LinkVm"
+                       x:Class="Spriggit.UI.LinkListingView"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                       xmlns:local="clr-namespace:Spriggit.UI"
+                       xmlns:wpf="clr-namespace:Noggog.WPF;assembly=Noggog.WPF"
+                       xmlns:viewModels="clr-namespace:Spriggit.UI.ViewModels"
+                       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                       mc:Ignorable="d"
+                       d:DesignHeight="300" d:DesignWidth="300">
+    <Grid Background="Transparent" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Button Grid.Column="0" x:Name="SyncToModButton" Margin="4,0, 0, 0" Width="20" >
+            <iconPacks:PackIconPicolIcons Kind="ArrowFullLeft"
+                                          VerticalAlignment="Center"
+                                          Padding="0,2" />
+        </Button>
+        
+        <Grid Grid.Column="1" 
+              Margin="5,2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" x:Name="LinkModNameBox"
+                       TextTrimming="CharacterEllipsis"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Right" />
+            <TextBlock Grid.Column="1" x:Name="LinkModExtensionBox"
+                       TextTrimming="CharacterEllipsis"
+                       VerticalAlignment="Center" />
+        </Grid>
+        
+        <Rectangle Grid.Column="2" x:Name="SeparationLine"
+                   Width="1" Fill="DimGray"
+                   HorizontalAlignment="Center" />
+        <Button Grid.Column="2" x:Name="SettingsButton" Width="20" >
+            <iconPacks:PackIconMaterial Kind="Cog" Padding="2" />
+        </Button>
+        
+        <Grid Grid.Column="3" 
+              Margin="5,2"
+              x:Name="GitPathGrid"
+              Background="Transparent"
+              HorizontalAlignment="Left">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" x:Name="LinkGitLeftPathBox"
+                       TextTrimming="CharacterEllipsis"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Center" />
+            <TextBlock Grid.Column="1" x:Name="LinkGitPathFolderNameBox"
+                       TextTrimming="CharacterEllipsis"
+                       VerticalAlignment="Center" />
+        </Grid>
+        
+        <Button Grid.Column="4" x:Name="SyncToGitButton" Margin="0,0, 4, 0" Width="20" >
+            <iconPacks:PackIconPicolIcons Kind="ArrowFullRight"
+                                          VerticalAlignment="Center"
+                                          Padding="0,2" />
+        </Button>
     </Grid>
-</UserControl>
+</wpf:NoggogUserControl>
