--- a/Spriggit.UI/Views/LinkListingView.xaml
+++ b/Spriggit.UI/Views/LinkListingView.xaml
@@ -1,4 +1,4 @@
-﻿<wpf:NoggogUserControl x:TypeArguments="viewModels:LinkVm"
+﻿<wpf:NoggogUserControl x:TypeArguments="transient:LinkVm"
                        x:Class="Spriggit.UI.LinkListingView"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,6 +8,7 @@
                        xmlns:wpf="clr-namespace:Noggog.WPF;assembly=Noggog.WPF"
                        xmlns:viewModels="clr-namespace:Spriggit.UI.ViewModels"
                        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                       xmlns:transient="clr-namespace:Spriggit.UI.ViewModels.Transient"
                        mc:Ignorable="d"
                        d:DesignHeight="300" d:DesignWidth="300">
     <Grid Background="Transparent" >
