--- a/Spriggit.UI/Views/ReposListingView.xaml
+++ b/Spriggit.UI/Views/ReposListingView.xaml
@@ -1,4 +1,4 @@
-﻿<wpf:NoggogUserControl x:TypeArguments="viewModels:ReposListingVm" x:Class="Spriggit.UI.ReposListingView"
+﻿<wpf:NoggogUserControl x:TypeArguments="singletons:ReposListingVm" x:Class="Spriggit.UI.ReposListingView"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,6 +7,7 @@
                        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                        xmlns:wpf="clr-namespace:Noggog.WPF;assembly=Noggog.WPF"
                        xmlns:viewModels="clr-namespace:Spriggit.UI.ViewModels"
+                       xmlns:singletons="clr-namespace:Spriggit.UI.ViewModels.Singletons"
                        mc:Ignorable="d"
                        d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -44,6 +45,13 @@
                 <Setter Property="Margin" Value="0" />
                 <Setter Property="BorderThickness" Value="0" />
                 <Setter Property="Background" Value="{x:Null}" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                            <ContentPresenter />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
             </Style>
         </Grid.Resources>
         <Grid Grid.Row="0">
