--- a/Spriggit.UI/Views/WindowView.xaml
+++ b/Spriggit.UI/Views/WindowView.xaml
@@ -1,4 +1,4 @@
-﻿<wpf:NoggogUserControl x:TypeArguments="viewModels:MainVm" x:Class="Spriggit.UI.WindowView"
+﻿<wpf:NoggogUserControl x:TypeArguments="singletons:MainVm" x:Class="Spriggit.UI.WindowView"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,16 +6,20 @@
                        xmlns:local="clr-namespace:Spriggit.UI"
                        xmlns:wpf="clr-namespace:Noggog.WPF;assembly=Noggog.WPF"
                        xmlns:viewModels="clr-namespace:Spriggit.UI.ViewModels"
+                       xmlns:singletons="clr-namespace:Spriggit.UI.ViewModels.Singletons"
                        mc:Ignorable="d"
                        d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <ContentPresenter x:Name="ContentPane">
             <ContentPresenter.Resources>
-                <DataTemplate DataType="{x:Type viewModels:ReposListingVm}">
+                <DataTemplate DataType="{x:Type singletons:ReposListingVm}">
                     <local:ReposListingView />
                 </DataTemplate>
-                <DataTemplate DataType="{x:Type viewModels:AddNewLinkVm}">
-                    <local:AddNewListingView />
+                <DataTemplate DataType="{x:Type singletons:AddNewLinkVm}">
+                    <local:EditListingView />
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type singletons:EditLinkVm}">
+                    <local:EditListingView />
                 </DataTemplate>
             </ContentPresenter.Resources>
         </ContentPresenter>
