--- a/Spriggit.UI/Views/LinkListingView.xaml
+++ b/Spriggit.UI/Views/LinkListingView.xaml
@@ -23,6 +23,11 @@
                                           VerticalAlignment="Center"
                                           Padding="0,2" />
         </Button>
+        <Button Grid.Column="0" x:Name="CancelSyncToModButton" Margin="4,0, 0, 0" Width="20" Visibility="Hidden" >
+            <iconPacks:PackIconMaterialDesign Kind="Close"
+                                              VerticalAlignment="Center"
+                                              Padding="0,2" />
+        </Button>
         
         <Grid Grid.Column="1" 
               HorizontalAlignment="Left"
@@ -47,6 +52,12 @@
             <iconPacks:PackIconPicolIcons Kind="ArrowFullRight"
                                           VerticalAlignment="Center"
                                           Padding="0,2" />
+        </Button>
+        
+        <Button Grid.Column="3" x:Name="CancelSyncToGitButton" Margin="0,0, 4, 0" Width="20" Visibility="Hidden" >
+            <iconPacks:PackIconMaterialDesign Kind="Close"
+                                              VerticalAlignment="Center"
+                                              Padding="0,2" />
         </Button>
     </Grid>
 </wpf:NoggogUserControl>
