--- a/Spriggit.UI/Resources.xaml
+++ b/Spriggit.UI/Resources.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:mahapps="http://metro.mahapps.com/winfx/xaml/controls">
     
-    <Color x:Key="OrangeYellow">#d9cc1e</Color>
+    <Color x:Key="OrangeYellow">#d9c61e</Color>
     <Color x:Key="Orange">#d9941e</Color>
     <Color x:Key="DarkOrange">#4a3410</Color>
     <Color x:Key="DarkBlue">#141728</Color>
@@ -32,6 +32,8 @@
         <Setter Property="mahapps:HeaderedControlHelper.HeaderForeground" Value="AliceBlue" />
         <Setter Property="Background" Value="Transparent" />
     </Style>
+    
+    <Style BasedOn="{StaticResource MahApps.Styles.TabItem}" TargetType="{x:Type TabItem}" />
 
     <Style x:Key="MahApps.Styles.TabItem" TargetType="TabItem">
         <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabControl}}, Path=Background, Mode=OneWay, FallbackValue=Transparent}" />
@@ -142,7 +144,7 @@
                         </DataTrigger>
 
                         <Trigger Property="IsSelected" Value="true">
-                            <Setter TargetName="ContentSite" Property="TextElement.Foreground" Value="{DynamicResource LightBlueBrush}" />
+                            <Setter TargetName="ContentSite" Property="TextElement.Foreground" Value="{DynamicResource OrangeYellowBrush}" />
                             <Setter TargetName="Underline" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mahapps:TabControlHelper.UnderlineSelectedBrush), Mode=OneWay}" />
                         </Trigger>
                         <Trigger Property="IsSelected" Value="false">
@@ -192,7 +194,7 @@
                                 <Condition SourceName="Border" Property="IsEnabled" Value="True" />
                                 <Condition Property="IsSelected" Value="True" />
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="ContentSite" Property="TextElement.Foreground" Value="{DynamicResource LightBlueBrush}" />
+                            <Setter TargetName="ContentSite" Property="TextElement.Foreground" Value="{DynamicResource OrangeYellowBrush}" />
                             <Setter TargetName="Underline" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mahapps:TabControlHelper.UnderlineMouseOverSelectedBrush), Mode=OneWay}" />
                         </MultiTrigger>
 
@@ -201,7 +203,7 @@
                                 <Condition SourceName="Border" Property="IsEnabled" Value="False" />
                                 <Condition Property="IsSelected" Value="True" />
                             </MultiTrigger.Conditions>
-                            <Setter TargetName="ContentSite" Property="TextElement.Foreground" Value="LightGray" />
+                            <Setter TargetName="ContentSite" Property="TextElement.Foreground" Value="{DynamicResource OrangeYellowBrush}" />
                             <Setter TargetName="Underline" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(mahapps:TabControlHelper.UnderlineMouseOverSelectedBrush), Mode=OneWay}" />
                         </MultiTrigger>
 
